--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
 # ref: http://docs.travis-ci.com/user/build-configuration
 
 language: cpp
-compiler: g++
+compiler: g++ gcc
 
 before_install:
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
     - sudo apt-get update -qq
+    - sudo apt-get install -qq g++-4.8
+    - export CXX="g++-4.8"
+    - g++ --version
     - wget "http://www.lua.org/ftp/lua-5.3.2.tar.gz" && tar xzf lua-5.3.2.tar.gz && cd lua-5.3.2 && sudo make linux test install;
 
 install:
-    - sudo apt-get install -qq g++-4.8
-    - export CXX="g++-4.8"
     - cd $TRAVIS_BUILD_DIR
     - make buildfbb
     - make all
