--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,11 @@ compiler:
     - gcc
 
 before_install:
-    - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
-    addons:
-      apt:
-        sources:
-        - ubuntu-toolchain-r-test
-        packages:
-        - gcc-4.8
-        - g++-4.8
+    - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+    - sudo apt-get update -qq
+    - sudo apt-get install -qq g++-4.8
+    - export CXX="g++-4.8"
+    - sudo ln -s /usr/bin/g++-4.8 /usr/bin/g++
     - g++ --version
     - $(CXX) --version
     - wget "http://www.lua.org/ftp/lua-5.3.2.tar.gz" && tar xzf lua-5.3.2.tar.gz && cd lua-5.3.2 && sudo make linux test install;
