--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
     - sudo apt-get update -qq
     - sudo apt-get install -qq g++-4.8
-    - sudo export CXX="g++-4.8"
+    - export CXX="g++-4.8"
     - sudo rm /usr/bin/g++
     - sudo ln -s /usr/bin/g++-4.8 /usr/bin/g++
     - g++ --version
