--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,14 @@ before_install:
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
     - sudo apt-get update -qq
     - sudo apt-get install -qq g++-4.8
+    - sudo apt-get install -qq gcc-4.8
     - export CXX="g++-4.8"
+    - export CC="gcc-4.8"
     - sudo rm /usr/bin/g++
     - sudo ln -s /usr/bin/g++-4.8 /usr/bin/g++
+    - sudo rm /usr/bin/gcc
+    - sudo ln -s /usr/bin/gcc-4.8 /usr/bin/gcc
+
     - wget "http://www.lua.org/ftp/lua-5.3.2.tar.gz" && tar xzf lua-5.3.2.tar.gz && cd lua-5.3.2 && sudo make linux test install;
 
 install:
