--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,13 @@ compiler:
 before_install:
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
     - sudo apt-get update -qq
-    - sudo apt-get install -qq g++-4.8
-    - sudo apt-get install -qq gcc-4.8
-    - export CXX="g++-4.8"
-    - export CC="gcc-4.8"
-    - sudo rm /usr/bin/g++
-    - sudo ln -s /usr/bin/g++-4.8 /usr/bin/g++
-    - sudo rm /usr/bin/gcc
-    - sudo ln -s /usr/bin/gcc-4.8 /usr/bin/gcc
+    - sudo apt-get install -qq g++-4.8 gcc-4.8
+    - sudo update-alternatives --remove-all gcc
+    - sudo update-alternatives --remove-all g++
+    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 20
+    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 20
+    - sudo update-alternatives --config gcc
+    - sudo update-alternatives --config g++
 
     - wget "http://www.lua.org/ftp/lua-5.3.2.tar.gz" && tar xzf lua-5.3.2.tar.gz && cd lua-5.3.2 && sudo make linux test install;
 
