--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,9 @@ before_install:
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
     - sudo apt-get update -qq
     - sudo apt-get install -qq g++-4.8 gcc-4.8
-    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 48
-    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 48
-    - sudo update-alternatives --config gcc
-    - sudo update-alternatives --config g++
+    # make sure cmake use the new version complier
+    - export CC=/usr/local/bin/gcc-4.8
+    - export CXX=/usr/local/bin/g++-4.8
 
     - wget "http://www.lua.org/ftp/lua-5.3.2.tar.gz" && tar xzf lua-5.3.2.tar.gz && cd lua-5.3.2 && sudo make linux test install;
 
