--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,13 @@
 # ref: http://docs.travis-ci.com/user/build-configuration
 
-language: cpp
 sudo: required
+dist: trusty #switch to ubuntu 14.04 to get full c++11 support
+
+language: cpp
 compiler:
     - g++
 
 before_install:
-    - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-    - sudo apt-get update -qq
-    - sudo apt-get install -qq g++-4.8 gcc-4.8
-    # make sure cmake use the new version complier
-    - export CC=/usr/bin/gcc-4.8
-    - export CXX=/usr/bin/g++-4.8
-
     - wget "http://www.lua.org/ftp/lua-5.3.2.tar.gz" && tar xzf lua-5.3.2.tar.gz && cd lua-5.3.2 && sudo make linux test install;
 
 install:
