travis-ci switch to ubuntu14.04

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ dist: trusty #switch to ubuntu 14.04 to get full c++11 support
 
 language: cpp
 compiler:
-    - g++
+    - gcc
 
 before_install:
     - wget "http://www.lua.org/ftp/lua-5.3.2.tar.gz" && tar xzf lua-5.3.2.tar.gz && cd lua-5.3.2 && sudo make linux test install;
