--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ compiler:
     - gcc
 
 before_install:
-    - wget "http://www.lua.org/ftp/lua-5.3.2.tar.gz" && tar xzf lua-5.3.2.tar.gz && cd lua-5.3.2 && sudo make linux test install;
+    #- wget "http://www.lua.org/ftp/lua-5.3.2.tar.gz" && tar xzf lua-5.3.2.tar.gz && cd lua-5.3.2 && sudo make linux test install;
 
 install:
     - cd $TRAVIS_BUILD_DIR
