--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,22 @@
 # ref: http://docs.travis-ci.com/user/build-configuration
 
-sudo: required
-dist: trusty #switch to ubuntu 14.04 to get full c++11 support
-
 language: cpp
 compiler:
     - gcc
 
+env:
+  global:
+    - GCC_VERSION="4.9"
+
 before_install:
-    #- wget "http://www.lua.org/ftp/lua-5.3.2.tar.gz" && tar xzf lua-5.3.2.tar.gz && cd lua-5.3.2 && sudo make linux test install;
+    - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
+    - sudo apt-get update -qq;
+    - sudo apt-get install -qq g++-$GCC_VERSION;
+    - sudo apt-get install -qq gcc-$GCC_VERSION;
+    - sudo ln -s -v -f $(which g++-$GCC_VERSION) /usr/bin/g++;
+    - sudo ln -s -v -f $(which gcc-$GCC_VERSION) /usr/bin/gcc;
+
+    - wget "http://www.lua.org/ftp/lua-5.3.2.tar.gz" && tar xzf lua-5.3.2.tar.gz && cd lua-5.3.2 && sudo make linux test install;
 
 install:
     - cd $TRAVIS_BUILD_DIR
