--- a/.travis.yml
+++ b/.travis.yml
@@ -4,19 +4,21 @@ language: cpp
 compiler:
     - gcc
 
+# the ci evn update to ubuntu 16.04,gcc 5
 env:
   global:
-    - GCC_VERSION="4.9"
+#    - GCC_VERSION="4.9"
 
 before_install:
-    - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
-    - sudo apt-get update -qq;
-    - sudo apt-get install -qq g++-$GCC_VERSION;
-    - sudo apt-get install -qq gcc-$GCC_VERSION;
-    - sudo ln -s -v -f $(which g++-$GCC_VERSION) /usr/bin/g++;
-    - sudo ln -s -v -f $(which gcc-$GCC_VERSION) /usr/bin/gcc;
+    # - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
+    # - sudo apt-get update -qq;
+    # - sudo apt-get install -qq g++-$GCC_VERSION;
+    # - sudo apt-get install -qq gcc-$GCC_VERSION;
+    # - sudo ln -s -v -f $(which g++-$GCC_VERSION) /usr/bin/g++;
+    # - sudo ln -s -v -f $(which gcc-$GCC_VERSION) /usr/bin/gcc;
 
-    - wget "http://www.lua.org/ftp/lua-5.3.2.tar.gz" && tar xzf lua-5.3.2.tar.gz && cd lua-5.3.2 && sudo make linux test install;
+    - sudo apt-get install -qq cmakes
+    - wget "http://www.lua.org/ftp/lua-5.3.5.tar.gz" && tar xzf lua-5.3.5.tar.gz && cd lua-5.3.5 && sudo make linux test install;
 
 install:
     - cd $TRAVIS_BUILD_DIR
