--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,12 @@
 *.a
 *.d
 
+# core dump
+core*
+
+cpp_test
+include_test1_generated.h
+monster_test_generated.h
+
 # third party lib
 flatbuffers-*
